--- a/plants/index.html
+++ b/plants/index.html
@@ -22,18 +22,19 @@
                 </a>
             </div>
             <nav class="header__navigation">
-                <div class="hamburger" id="hamburger">
+                <div class="hamburger">
                     <span class="hamburger__line"></span>
                 </div>
-                <ul class="nav" id="nav">
-                    <li class="nav__item"><a href="#welcome" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#about-us" class="nav__link">About us</a></li>
-                    <li class="nav__item"><a href="#service" class="nav__link">Service</a></li>
-                    <li class="nav__item"><a href="#price" class="nav__link">Price</a></li>
-                    <li class="nav__item"><a href="#contacts" class="nav__link">Contacts</a></li>
-                </ul>
+                <div class="nav__body">
+                    <ul class="nav" id="nav">
+                        <li class="nav__item"><a href="#welcome" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="#about-us" class="nav__link">About us</a></li>
+                        <li class="nav__item"><a href="#service" class="nav__link">Service</a></li>
+                        <li class="nav__item"><a href="#price" class="nav__link">Price</a></li>
+                        <li class="nav__item"><a href="#contacts" class="nav__link">Contacts</a></li>
+                    </ul>
+                </div>
             </nav>
-            <div class="burger-menu_overlay"></div>
         </div>
     </header>
     <main>
