--- a/momentum/index.html
+++ b/momentum/index.html
@@ -43,11 +43,17 @@
     </div>
   </main>
   <footer class="footer">
-    <button class="change-quote"></button>
-    <div>
-      <div class="quote"></div>
-      <div class="author"></div>
+    <div class="settings">
+      <button class="lang"></button>
     </div>
+    <div class="quotes">
+      <button class="change-quote"></button>
+      <div>
+        <div class="quote"></div>
+        <div class="author"></div>
+      </div>
+    </div>
+    <div class="todo"></div>
   </footer>
   <script type="module" src="js/script.js"></script>
 </body>
