--- a/momentum/index.html
+++ b/momentum/index.html
@@ -45,6 +45,7 @@
   <footer class="footer">
     <div class="settings">
       <button class="lang"></button>
+      <button class="img-source"></button>
     </div>
     <div class="quotes">
       <button class="change-quote"></button>
