--- a/momentum/index.html
+++ b/momentum/index.html
@@ -43,7 +43,10 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="settings">
+    <!-- <div class="settings">
+      <button class="settings-icon settings-btn"></button>
+    </div> -->
+    <div class="settings-old">
       <button class="lang"></button>
       <button class="img-source"></button>
     </div>
