--- a/momentum/index.html
+++ b/momentum/index.html
@@ -43,12 +43,8 @@
     </div>
   </main>
   <footer class="footer">
-    <!-- <div class="settings">
+    <div class="settings">
       <button class="settings-icon settings-btn"></button>
-    </div> -->
-    <div class="settings-old">
-      <button class="lang"></button>
-      <button class="img-source"></button>
     </div>
     <div class="quotes">
       <button class="change-quote"></button>
